tests/ui/parser/issues/issue-68629.stderr
error: unknown start of token: \u{1c}
  --> $DIR/issue-68629.rs:6:1
   |
LL | ␜␟ts␀![{i
   | ^

error: unknown start of token: \u{1f}
  --> $DIR/issue-68629.rs:6:2
   |
LL | ␜␟ts␀![{i
   |  ^

error: unknown start of token: \u{0}
  --> $DIR/issue-68629.rs:6:5
   |
LL | ␜␟ts␀![{i
   |     ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/issue-68629.rs:7:1
   |
LL | ␀␀  fn rݻoa>rݻm
   | ^^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used
   = note: character appears once more

error: this file contains an unclosed delimiter
  --> $DIR/issue-68629.rs:7:17
   |
LL | ␜␟ts␀![{i
   |       -- unclosed delimiter
   |       |
   |       unclosed delimiter
LL | ␀␀  fn rݻoa>rݻm
   |                ^

error: aborting due to 5 previous errors

